# FordAIWebApp

./: .dockerignore  .env.example  .gitignore  DESIGN.md  De_xuat_Website_AI_Sales_Ford_Huynh_Dang_Huy.md  Dockerfile  PRODUCT.md  alembic.ini  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: production-smoke.yml
alembic/: env.py
alembic/versions/: 20260607_0001_phase3_foundation.py  20260607_0002_phase5_admin.py  20260607_0003_phase6_ai_assistant.py
app/: __init__.py  main.py
app/core/: __init__.py  admin_auth.py  config.py  templates.py
app/data/: __init__.py  site_content.py
app/db/: session.py
app/models/: __init__.py  ai.py  audit.py  content.py  lead.py  vehicle.py
app/routers/: admin.py  api.py  pages.py
app/schemas/: __init__.py  ai.py  lead.py
docs/: AI_ASSISTANT_SPEC.md  CONTENT_AND_DATA_GOVERNANCE.md  DECISIONS.md  DESIGN_QUALITY_PLAYBOOK.md  HOSTING_TRAFFIC_AND_FRESHNESS.md  IMPLEMENTATION_PLAN.md  OPERATIONS_AND_DEPLOYMENT.md  PHASE_0_ALIGNMENT.md  PHASE_1_DISCOVERY_AND_CONTENT.md  PHASE_2_UX_UI_DIRECTION.md  PHASE_3_TECHNICAL_FOUNDATION.md  PHASE_4_PUBLIC_WEBSITE_MVP.md  PHASE_5_ADMIN_AND_LEAD_FLOW.md  PHASE_6_AI_ASSISTANT.md  PHASE_7_QA_AND_UAT.md  PHASE_8_LAUNCH_AND_OPERATIONS.md  PROJECT_PROGRESS_CHECKLIST.md  QA_ACCEPTANCE.md  README.md  RENDER_CLOUDFLARE_LAUNCH_RUNBOOK.md  SOURCE_SITE_INGESTION_PLAN.md  TECH_ARCHITECTURE.md  USER_DESIGN_REVIEW_PHASE_2.md  UX_UI_REQUIREMENTS.md
scripts/: check.ps1  dev.ps1  smoke.py  start.sh
tests/: test_app.py
(+38 files in other folders)
