[project]
name = "ford-ai-webapp"
version = "0.1.0"
description = "FastAPI website tu van Ford ca nhan cho anh Huynh Dang Huy."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.125.0",
  "uvicorn[standard]>=0.38.0",
  "jinja2>=3.1.6",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.45",
  "alembic>=1.17.0",
  "psycopg[binary]>=3.3.0",
  "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
